PyMaker/datas/object2/RawHTML/i4601/Python_DOC_referPages.typeerror-strptime-argument-1-must-be-str-not-datetime-date-python.txt
<div class="post-text" itemprop="text">
<p>Facing issues while converting date to string,</p>
<pre><code>print(type(from_date))
from_date = datetime.datetime.strptime(from_date, '%Y-%m-%d').date()
</code></pre>
<p>My from_date value is in an ini file, </p>
<pre><code>from_date = 2018-01-01
</code></pre>
<p>My TraceBack log is,</p>
<pre><code>Traceback (most recent call last):
File "Flexi_DailyToWeekly.py", line 87, in &lt;module&gt;
tuesday = get_data(session,from_keyspace, from_table, to_keyspace, to_table_tuesday, to_table_wednesday, to_table_thursday, to_table_friday, from_date, to_date)
File "Flexi_DailyToWeekly.py", line 11, in get_data
from_date = datetime.datetime.strptime(from_date, '%Y-%m-%d')
TypeError: strptime() argument 1 must be str, not datetime.date'
</code></pre>
<p>I've used type(from_date) which returns from_date as a string.</p>
<p>Also tried,</p>
<pre><code>from_date = datetime.datetime.strptime(str(from_date), '%Y-%m-%d').date()
</code></pre>
<p>still the same error persists.</p>
<p>Changed from_date as suggested in the answers below,</p>
<pre><code>from_date = "2018-01-01"
</code></pre>
<p>The error persisits,</p>
<pre><code>Traceback (most recent call last):
File "Flexi_DailyToWeekly.py", line 82, in &lt;module&gt;
from_date = datetime.datetime.strptime(from_date, '%Y-%m-%d').date()
File "/usr/lib/python3.5/_strptime.py", line 510, in _strptime_datetime
tt, fraction = _strptime(data_string, format)
File "/usr/lib/python3.5/_strptime.py", line 343, in _strptime
(data_string, format))
ValueError: time data '"2018-01-01"' does not match format '%Y-%m-%d'
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Replace </p>
<pre><code>from_date = 2018-01-01
</code></pre>
<p>to </p>
<pre><code>from_date : 2018-01-01
</code></pre>
<p>in ini file </p>
<p>Tested with code :</p>
<pre><code>import configparser
import datetime
config = configparser.ConfigParser()
config.read('Test.ini')
print (config['DEFAULT']['date'])
from_date = config['DEFAULT']['date']
print(type(from_date))
from_date = datetime.datetime.strptime(from_date, '%Y-%m-%d').date()
print (from_date)
</code></pre>
<p>and Test.ini is </p>
<pre><code>[DEFAULT]
date : 2018-1-1
</code></pre>
<p>output is :</p>
<pre><code>2018-1-1
&lt;class 'str'&gt;
2018-01-01
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>As per <a href="https://docs.python.org/3.6/library/datetime.html#datetime.datetime.strptime" rel="nofollow noreferrer">docs</a>, The <code>datetime.strptime()</code> method accepts a <code>date_string</code> as the first argument. So, I tried this:</p>
<pre><code>import datetime
test = datetime.datetime.strptime('2018-01-01', '%Y-%m-%d').date()
print(test)
#datetime.date(2018, 1, 1)
</code></pre>
<p>If I do <code>from_date = 2018-01-01</code>, I get an <code>invalid token</code> error for the <code>type</code> of <code>from_date</code>:</p>
<pre><code>   from_date = 2018-01-01
   print(type(from_date))

   File "&lt;ipython-input-7-9e5449277912&gt;", line 2
   from_date = 2018-01-01
                      ^
   SyntaxError: invalid token
</code></pre>
<p>This means that <code>from_date</code> must be a string. You could use <code>from_date = '2018-01-01'</code> and that would work. If I check the type of <code>from_date</code> now, I will get a type of class <code>string</code>: </p>
<pre><code>from_date = '2018-01-01'
print(type(from_date))
#&lt;class 'str'&gt;
</code></pre>
<p>But when I look at the first <em>Traceback</em> log, it raises a <code>TypeError</code>. This means that the value stored in <code>from_date</code> is of type <code>datetime.date</code>. Consider the following: </p>
<pre><code>import datetime
from_date = datetime.date(2018, 1, 1)
test = datetime.datetime.strptime(str(from_date), '%Y-%m-%d').date()
print(test)
#2018-01-01
</code></pre>
</div>
<span class="comment-copy">use str(from_date)</span>
<span class="comment-copy">tried that too. No use</span>
<span class="comment-copy">No. Your error doesn't persist, it's changed. Now it shows that you have managed to include the double quotes in your string (<code>'"2018-01-01"'</code>) which is the cause of your latest error. In order for people to help, you are going to have to show more of your code than just the traceback and the line at which it appears - see how to write a <a href="https://stackoverflow.com/help/mcve">Minimal, Complete, and Verifiable example</a>.</span>
<span class="comment-copy">Try using single quotes instead of double like so from_date = '2018-01-01'</span>
<span class="comment-copy">Tried it, the error still persists. Check my question update.</span>
<span class="comment-copy">from_date : 2018-01-01</span>
<span class="comment-copy">anything with separator with : will be considered as string so try it "<a href="https://docs.python.org/3/library/configparser.html" rel="nofollow noreferrer">docs.python.org/3/library/configparser.html</a>"</span>
